--- a/_posts/2023-01-18-welcome.md
+++ b/_posts/2023-01-18-welcome.md
@@ -4,8 +4,8 @@ layout: post
 tag:
 ---
 
-In the fall of 2022, ATLAS-D2K was launched to become the "go-to" open-access resource for the research community of mouse and human renal and genitourinary development and disease. ATLAS-D2K stands for "Analysis, Technology, Leadership, Administration and Science - Data to Knowledge" and will focus on centralizing data and resources from the **GUDMAP** and **ReBuilding A Kidney (RBK)** consortiums, which are thte leading providers of genitourinary and kidney data, respectively.
+In the fall of 2022, ATLAS-D2K was launched to become the "go-to" open-access resource for the research community of mouse and human renal and genitourinary development and disease. ATLAS-D2K stands for "Analysis, Technology, Leadership, Administration and Science - Data to Knowledge" and will focus on centralizing data and resources from the **GUDMAP** and **ReBuilding A Kidney (RBK)** consortia, which are the leading providers of genitourinary and kidney data, respectively.
 
-ATLAS-D2K will provide access to analysis and visualizations to make this data as useful to users at many different levels of experience - from the bioinformatician to the student. ATLAS-D2K will also integrate contributions from HuBMAP and KPMP and will soon include more intersections between data, knowledge and analysis tools from all of these consortiums.
+ATLAS-D2K will provide access to analysis and visualizations to make this data as useful to users at many different levels of experience - from the bioinformatician to the student. ATLAS-D2K will also integrate contributions from HuBMAP and KPMP and will soon include more intersections between data, knowledge and analysis tools from all of these consortia.
 
 We now house all of the data from GUDMAP and RBK and are in the process of consolidating the rest of their resources and content to this website. As we are evolving this new web presence into a knowledgebase, we would appreciate any feedback from users at our [contact page](/contact/).
