--- a/_posts/gudmap/2016-05-18-RBK-PPP.md
+++ b/_posts/gudmap/2016-05-18-RBK-PPP.md
@@ -16,4 +16,4 @@ The (Re)Building A Kidney Consortium is happy to announce that we are accepting 
 
 Applications of 5 pages requesting up to $150,000 total costs for per year for a maximum of 2 years are due July 1, 2016 for a projected start date of October 3, 2016.  
 
-For complete details about this program, go to: [https://www.rebuildingakidney.org/partnership-project-program.html](https://www.rebuildingakidney.org/partnership-project-program.html).
+For complete details about this program, go to: [https://www.atlas-d2k.org//collaboration/op-pool/](/collaboration/op-pool/).
