fixing phase 1 project pages

--- a/_bibliography/rbk_references.bib
+++ b/_bibliography/rbk_references.bib
@@ -1470,7 +1470,7 @@ eprint = {
   volume = 145,
   issue = 16,
   abstract = {The mammalian kidney develops through reciprocal interactions between the ureteric bud and the metanephric mesenchyme to give rise to the entire collecting system and the nephrons. Most of our knowledge of the developmental regulators driving this process arises from the study of gene expression and functional genetics in mice and other animal models. In order to shed light on human kidney development, we have used single-cell transcriptomics to characterize gene expression in different cell populations, and to study individual cell dynamics and lineage trajectories during development. Single-cell transcriptome analyses of 6414 cells from five individual specimens identified 11 initial clusters of specific renal cell types as defined by their gene expression profile. Further subclustering identifies progenitors, and mature and intermediate stages of differentiation for several renal lineages. Other lineages identified include mesangium, stroma, endothelial and immune cells. Novel markers for these cell types were revealed in the analysis, as were components of key signaling pathways driving renal development in animal models. Altogether, we provide a comprehensive and dynamic gene expression profile of the developing human kidney at the single-cell level.},
-	doi = {http://dx.doi.org/10.1242/dev.164038},
+	doi = {10.1242/dev.164038},
 	journal = {Development},
 	author = {Menon, R and Otto, EA and Kokoruda, A and Zhou, J and Zhang, Z and Yoon, E and Chen, Y and Troyanscaya, O and Spence, J and Kretzler, M and Cebrian, C},
 	month = August,
@@ -1549,7 +1549,7 @@ Conclusions We present the first step toward incorporation of single-cell transc
 @article{howden_simultaneous_2018,
 	title = {Simultaneous reprogramming and gene editing of human fibroblasts},
 	volume = {13},
-	doi = {http://dx.doi.org/10.1038/nprot.2018.007},
+	doi = {10.1038/nprot.2018.007},
 	abstract = {The utility of human induced pluripotent stem cells (iPSCs) is enhanced by an ability to precisely modify a chosen locus with minimal impact on the remaining genome. However, the derivation of gene-edited iPSCs typically involves multiple steps requiring lengthy culture periods and several clonal events. Here, we describe a one-step protocol for reliable generation of clonally derived gene-edited iPSC lines from human fibroblasts in the absence of drug selection or FACS enrichment. Using enhanced episomal-based reprogramming and CRISPR/Cas9 systems, gene-edited and passage-matched unmodified iPSC lines are obtained following a single electroporation of human fibroblasts. To minimize unwanted mutations within the target locus, we use a Cas9 variant that is associated with decreased nonhomologous end-joining (NHEJ) activity. This protocol outlines in detail how this streamlined approach can be used for both monoallelic and biallelic introduction of specific base changes or transgene cassettes in a manner that is efficient, rapid (∼6–8 weeks), and cost-effective.},
 	number = {5},
 	journal = {Nature Protocols},
@@ -1560,7 +1560,7 @@ Conclusions We present the first step toward incorporation of single-cell transc
 }
 @article{daniel_spatiotemporal_2018,
 	title = {Spatiotemporal heterogeneity and patterning of developing renal blood vessels},
-	doi = {http://dx.doi.org/10.1007/s10456-018-9612-y},
+	doi = {10.1007/s10456-018-9612-y},
 	abstract = {The kidney vasculature facilitates the excretion of wastes, the dissemination of hormones, and the regulation of blood chemistry. To carry out these diverse functions, the vasculature is regionalized within the kidney and along the nephron. However, when and how endothelial regionalization occurs remains unknown. Here, we examine the developing kidney vasculature to assess its 3-dimensional structure and transcriptional heterogeneity. First, we observe that endothelial cells (ECs) grow coordinately with the kidney bud as early as E10.5, and begin to show signs of speci cation by E13.5 when the  rst arteries can be identi ed. We then focus on how ECs pattern and remodel with respect to the developing nephron and collecting duct epithelia. ECs circumscribe nephron progenitor populations at the distal tips of the ureteric bud (UB) tree and form stereotyped cruciform structures around each tip. Beginning at the renal vesicle (RV) stage, ECs form a continuous plexus around developing nephrons. The endothelial plexus envelops and elaborates with the maturing nephron, becoming preferentially enriched along the early distal tubule. Lastly, we perform transcriptional and immuno uorescent screens to characterize spatiotemporal heterogeneity in the kidney vasculature and identify novel regionally enriched genes. A better understanding of development of the kidney vasculature will help instruct engineering of properly vascularized ex vivo kidneys and evaluate diseased kidneys.},
 	journal = {Angiogenesis},
 	author = {Daniel, E and Azizoglu, DB and Ryan, AR and Walji, TA and Chaney, CP and Sutton, GI and Carroll, TJ and Marciano, DK and Cleaver, O},
@@ -1580,7 +1580,7 @@ Conclusions We present the first step toward incorporation of single-cell transc
 @article{van_den_berg_renal_2018,
 	title = {Renal {Subcapsular} {Transplantation} of {PSC}-{Derived} {Kidney} {Organoids} {Induces} {Neo}-vasculogenesis and {Significant} {Glomerular} and {Tubular} {Maturation} {In} {Vivo}.},
 	volume = {10},
-	doi = {http://dx.doi.org/10.1016/j.stemcr.2018.01.041},
+	doi = {10.1016/j.stemcr.2018.01.041},
 	abstract = {Human pluripotent stem cell (hPSC)-derived kidney organoids may facilitate disease modeling and the generation of tissue for renal replacement. Long-term application, however, will require transferability between hPSC lines and significant improvements in organ maturation. A key question is whether time or a patent vasculature is required for ongoing morphogenesis. Here, we show that hPSC-derived kidney organoids, derived in fully defined medium conditions and in the absence of any exogenous vascular endothelial growth factor, develop host-derived vascularization. In vivo imaging of organoids under the kidney capsule confirms functional glomerular perfusion as well as connection to pre-existing vascular networks in the organoids. Wide-field electron microscopy demonstrates that transplantation results in formation of a glomerular basement membrane, fenestrated endothelial cells, and podocyte foot processes. Furthermore, compared with non-transplanted organoids, polarization and segmental specialization of tubular epithelium are observed. These data demonstrate that functional vascularization is required for progressive morphogenesis of human kidney organoids.},
 	number = {3},
 	journal = {Stem Cell Reports.},
@@ -1592,7 +1592,7 @@ Conclusions We present the first step toward incorporation of single-cell transc
 }
 @article{lindstrom_conserved_2018,
 	title = {Conserved and {Divergent} {Features} of {Human} and {Mouse} {Kidney} {Organogenesis}.},
-	doi = {http://dx.doi.org/10.1681/ASN.2017080887},
+	doi = {10.1681/ASN.2017080887},
 	abstract = {Human kidney function is underpinned by approximately 1,000,000 nephrons, although the number varies substantially, and low nephron number is linked to disease. Human kidney development initiates around 4 weeks of gestation and ends around 34-37 weeks of gestation. Over this period, a reiterative inductive process establishes the nephron complement. Studies have provided insightful anatomic descriptions of human kidney development, but the limited histologic views are not readily accessible to a broad audience. In this first paper in a series providing comprehensive insight into human kidney formation, we examined human kidney development in 135 anonymously donated human kidney specimens. We documented kidney development at a macroscopic and cellular level through histologic analysis, RNA in situ hybridization, immunofluorescence studies, and transcriptional profiling, contrasting human development (4-23 weeks) with mouse development at selected stages (embryonic day 15.5 and postnatal day 2). The high-resolution histologic interactive atlas of human kidney organogenesis generated can be viewed at the GUDMAP database (www.gudmap.org) together with three-dimensional reconstructions of key components of the data herein. At the anatomic level, human and mouse kidney development differ in timing, scale, and global features such as lobe formation and progenitor niche organization. The data also highlight differences in molecular and cellular features, including the expression and cellular distribution of anchor gene markers used to identify key cell types in mouse kidney studies. These data will facilitate and inform in vitro efforts to generate human kidney structures and comparative functional analyses across mammalian species.},
 	journal = {J Am Soc Nephrol},
 	author = {Lindström, NO and McMahon, JA and Guo, J and Tran, T and Guo, Q and Rutledge, E and Parvez, RK and Saribekyan, G and Schuler, RE and Liao, C and Kim, AD and Abdelhalim, A and Ruffins, SW and Thornton, ME and Basking, L and Grubbs, B and Kesselman, C and McMahon, AP},
@@ -1602,7 +1602,7 @@ Conclusions We present the first step toward incorporation of single-cell transc
 
 @article{malone_bringing_2018,
 	title = {Bringing {Renal} {Biopsy} {Interpretation} {Into} the {Molecular} {Age} {With} {Single}-{Cell} {RNA} {Sequencing}},
-	doi = {http://dx.doi.org/10.1016/j.semnephrol.2017.09.005},
+	doi = {10.1016/j.semnephrol.2017.09.005},
 	abstract = {The renal biopsy provides critical diagnostic and prognostic information to clinicians including cases of acute kidney injury, chronic kidney disease, and allograft dysfunction. Today, biopsy specimens are read using a combination of light microscopy, electron microscopy, and indirect immunofluorescence, with a limited number of antibodies. These techniques all were perfected decades ago with only incremental changes since then. By contrast, recent advances in single-cell genomics are transforming scientists' ability to characterize cells. Rather than measure the expression of several genes at a time by immunofluorescence, it now is possible to measure the expression of thousands of genes in thousands of single cells simultaneously. Here, we argue that the development of single-cell RNA sequencing offers an opportunity to describe human kidney disease comprehensively at a cellular level. It is particularly well suited for the analysis of immune cells, which are characterized by multiple subtypes and changing functions depending on their environment. In this review, we summarize the development of single-cell RNA sequencing methodologies. We discuss how these approaches are being applied in other organs, and the potential for this powerful technology to transform our understanding of kidney disease once applied to the renal biopsy.},
 	journal = {Semin Nephrol},
 	author = {Malone, AF and Wu, H and Humphreys, BD},
@@ -1613,7 +1613,7 @@ Conclusions We present the first step toward incorporation of single-cell transc
 	title = {Charting the transcriptional landscape of cells of renin lineage following podocyte depletion},
 	volume = {12},
 	url = {/publications/PLoS-ONE-2017-McClelland.pdf},
-	doi = {http://dx.doi.org/10.1371/journal.pone.0189084},
+	doi = {10.1371/journal.pone.0189084},
 	abstract = {Renin producing cells of the juxtaglomerulus, herein called cells of renin lineage (CoRL), have garnered recent interest for their propensity to act as a progenitor source for various kidney cell types including podocytes. Despite recent advances, the process of transdifferentiation of CoRL to podocytes is poorly understood. In this study, we employed a transgenic reporter mouse line which permanently labels CoRL with ZsGreen fluorescent protein, allowing for isolation by fluorescence-activated cell sorting. At 5 days following induction of abrupt podocyte ablation via anti-podocyte sheep IgG, mice were sacrificed and CoRL were isolated by FACS. RNA was subsequently analyzed by microarray. Gene set enrichment analysis (GSEA) was performed and revealed that CoRL display a distinct phenotype following podocyte ablation, primarily consisting of downregulation of metabolic processes and upregulation of immuno-modulatory processes. Additionally, RNA-biology and cell cycle-related processes were also upregulated. Changes in gene expression or activity of a core set of transcription factors including HNF1 and E2F were identified through changes in enrichment of their respective target genes. However, integration of results from transcription factor and canonical pathway analysis indicated that ERR1 and PU-box family members may be the major contributors to the post-podocyte ablation phenotype of CoRL. Finally, top ranking genes were selected from the microarray-based analysis and confirmed by qPCR. Collectively, our results provide valuable insights into the transcriptional regulation of CoRL following abrupt podocyte ablation.},
 	number = {12},
 	journal = {PLOS ONE},
@@ -1624,7 +1624,7 @@ Conclusions We present the first step toward incorporation of single-cell transc
 @article{kim_gene-edited_2017,
 	title = {Gene-{Edited} {Human} {Kidney} {Organoids} {Reveal} {Mechanisms} of {Disease} in {Podocyte} {Development}},
 	volume = {35},
-	doi = {http://dx.doi.org/10.1002/stem.2707},
+	doi = {10.1002/stem.2707},
 	abstract = {A critical event during kidney organogenesis is the differentiation of podocytes, specialized epithelial cells that filter blood plasma to form urine. Podocytes derived from human pluripotent stem cells (hPSC-podocytes) have recently been generated in nephron-like kidney organoids, but the developmental stage of these cells and their capacity to reveal disease mechanisms remains unclear. Here, we show that hPSC-podocytes phenocopy mammalian podocytes at the capillary loop stage (CLS), recapitulating key features of ultrastructure, gene expression, and mutant phenotype. hPSC-podocytes in vitro progressively establish junction-rich basal membranes (nephrin+ podocin+ ZO-1+ ) and microvillus-rich apical membranes (podocalyxin+ ), similar to CLS podocytes in vivo. Ultrastructural, biophysical, and transcriptomic analysis of podocalyxin-knockout hPSCs and derived podocytes, generated using CRISPR/Cas9, reveals defects in the assembly of microvilli and lateral spaces between developing podocytes, resulting in failed junctional migration. These defects are phenocopied in CLS glomeruli of podocalyxin-deficient mice, which cannot produce urine, thereby demonstrating that podocalyxin has a conserved and essential role in mammalian podocyte maturation. Defining the maturity of hPSC-podocytes and their capacity to reveal and recapitulate pathophysiological mechanisms establishes a powerful framework for studying human kidney disease and regeneration. Stem Cells 2017;35:2366-2378},
 	number = {12},
 	journal = {Stem Cells},
@@ -1645,7 +1645,7 @@ Conclusions We present the first step toward incorporation of single-cell transc
 @article{wu_promise_2017,
 	title = {The promise of single-cell {RNA} sequencing for kidney disease investigation},
 	volume = {92},
-	doi = {http://dx.doi.org/10.1016/j.kint.2017.06.033},
+	doi = {10.1016/j.kint.2017.06.033},
 	abstract = {Recent techniques for single-cell RNA sequencing (scRNA-seq) at high throughput are leading to profound new discoveries in biology. The ability to generate vast amounts of transcriptomic data at cellular resolution represents a transformative advance, allowing the identification of novel cell types, states, and dynamics. In this review, we summarize the development of scRNA-seq methodologies and highlight their advantages and drawbacks. We discuss available software tools for analyzing scRNA-Seq data and summarize current computational challenges. Finally, we outline ways in which this powerful technology might be applied to discovery research in kidney development and disease.},
 	number = {6},
 	journal = {Kidney International},
@@ -1666,7 +1666,7 @@ Conclusions We present the first step toward incorporation of single-cell transc
 @article{mandrycky_tissue_2017,
 	title = {Tissue engineering toward organ-specific regeneration and disease modeling},
 	volume = {7},
-	doi = {http://dx.doi.org/10.1557/mrc.2017.58},
+	doi = {10.1557/mrc.2017.58},
 	abstract = {Tissue engineering has been recognized as a translational approach to replace damaged tissue or whole organs. Engineering tissue, however, faces an outstanding knowledge gap in the challenge to fully recapitulate complex organ-specific features. Major components, such as cells, matrix, and architecture, must each be carefully controlled to engineer tissue-specific structure and function that mimics what is found in vivo. Here we review different methods to engineer tissue, and discuss critical challenges in recapitulating the unique features and functional units in four major organs-the kidney, liver, heart, and lung, which are also the top four candidates for organ transplantation in the USA. We highlight advances in tissue engineering approaches to enable the regeneration of complex tissue and organ substitutes, and provide tissue-specific models for drug testing and disease modeling. We discuss the current challenges and future perspectives toward engineering human tissue models.},
 	number = {3},
 	journal = {MRS Communications},
@@ -1679,7 +1679,7 @@ Conclusions We present the first step toward incorporation of single-cell transc
 	title = {{WT}1 {Is} {Necessary} for the {Proliferation} and {Migration} of {Cells} of {Renin} {Lineage} {Following} {Kidney} {Podocyte} {Depletion}.},
 	volume = {pii: S2213-6711},
 	url = {/publications/WT1-paper-Stem-Cell-Reports-Shankland.pdf},
-	doi = {http://dx.doi.org/10.1016/j.stemcr.2017.08.020},
+	doi = {10.1016/j.stemcr.2017.08.020},
 	abstract = {Wilms' tumor suppressor 1 (WT1) plays an important role in cell proliferation and mesenchymal-epithelial balance in normal development and disease. Here, we show that following podocyte depletion in three experimental models, and in patients with focal segmental glomerulosclerosis (FSGS) and membranous nephropathy, WT1 increased significantly in cells of renin lineage (CoRL). In an animal model of FSGS in RenWt1fl/fl reporter mice with inducible deletion of WT1 in CoRL, CoRL proliferation and migration to the glomerulus was reduced, and glomerular disease was worse compared with wild-type mice. To become podocytes, CoRL undergo mesenchymal-to-epithelial transformation (MET), typified by reduced staining for mesenchymal markers (MYH11, SM22, αSMA) and de novo expression of epithelial markers (E-cadherin and cytokeratin18). Evidence for changes in MET markers was barely detected in RenWt1fl/fl mice. Our results show that following podocyte depletion, WT1 plays essential roles in CoRL proliferation and migration toward an adult podocyte fate.},
 	number = {17},
 	journal = {Stem Cell Reports.},
@@ -1690,7 +1690,7 @@ Conclusions We present the first step toward incorporation of single-cell transc
 }
 @article{uzarski_essential_2017,
 	title = {Essential design considerations for the resazurin reduction assay to noninvasively quantify cell expansion within perfused extracellular matrix scaffolds.},
-	doi = {http://dx.doi.org/10.1016/j.biomaterials.2017.02.015},
+	doi = {10.1016/j.biomaterials.2017.02.015},
 	abstract = {Precise measurement of cellularity within bioartificial tissues and extracellular matrix (ECM) scaffolds is necessary to augment rigorous characterization of cellular behavior, as accurate benchmarking of tissue function to cell number allows for comparison of data across experiments and between laboratories. Resazurin, a soluble dye that is reduced to highly fluorescent resorufin in proportion to the metabolic activity of a cell population, is a valuable, noninvasive tool to measure cell number. We investigated experimental conditions in which resazurin reduction is a reliable indicator of cellularity within three-dimensional (3D) ECM scaffolds. Using three renal cell populations, we demonstrate that correlation of viable cell numbers with the rate of resorufin generation may deviate from linearity at higher cell densities, lower resazurin working volumes, or longer incubation times that all contribute to depleting the pool of resazurin. In conclusion, while the resazurin reduction assay provides a powerful, noninvasive readout of metrics enumerating cellularity and growth within ECM scaffolds, assay conditions may strongly influence its applicability for accurate quantification of cell number. The approach and methodological recommendations presented herein may be used as a guide for application-specific optimization of this assay to obtain rigorous and accurate measurement of cellular content in bioengineered tissues.},
 	number = {129},
 	journal = {Biomaterials},
@@ -1703,7 +1703,7 @@ Conclusions We present the first step toward incorporation of single-cell transc
 	title = {({Re}){Building} a {Kidney}.},
 	volume = {28},
 	url = {/publications/RBK_Manuscript.pdf},
-	doi = {http://dx.doi.org/10.1681/ASN.2016101077},
+	doi = {10.1681/ASN.2016101077},
 	abstract = {(Re)Building a Kidney is a National Institute of Diabetes and Digestive and Kidney Diseases-led consortium to optimize approaches for the isolation, expansion, and differentiation of appropriate kidney cell types and the integration of these cells into complex structures that replicate human kidney function. The ultimate goals of the consortium are two-fold: to develop and implement strategies for in vitro engineering of replacement kidney tissue, and to devise strategies to stimulate regeneration of nephrons in situ to restore failing kidney function. Projects within the consortium will answer fundamental questions regarding human gene expression in the developing kidney, essential signaling crosstalk between distinct cell types of the developing kidney, how to derive the many cell types of the kidney through directed differentiation of human pluripotent stem cells, which bioengineering or scaffolding strategies have the most potential for kidney tissue formation, and basic parameters of the regenerative response to injury. As these projects progress, the consortium will incorporate systematic investigations in physiologic function of in vitro and in vivo differentiated kidney tissue, strategies for engraftment in experimental animals, and development of therapeutic approaches to activate innate reparative responses.},
 	number = {5},
 	journal = {J Am Soc Nephrol},
@@ -1716,7 +1716,7 @@ Conclusions We present the first step toward incorporation of single-cell transc
 	title = {Gli1+ {Pericyte} {Loss} {Induces} {Capillary} {Rarefaction} and {Proximal} {Tubular} {Injury}.},
 	issn = {1046-6673/2803-776},
 	url = {/publications/Kramann-2016.pdf},
-	doi = {http://dx.doi.org/10.1681/ASN.2016030297},
+	doi = {10.1681/ASN.2016030297},
 	abstract = {Peritubular capillary rarefaction is hypothesized to contribute to the increased risk of future CKD after AKI. Here, we directly tested the role of Gli1+ kidney pericytes in the maintenance of peritubular capillary health, and the consequences of pericyte loss
 during injury. Using bigenic Gli1-CreERt2; R26tdTomato reporter mice, we observed
 increased distance between Gli1+ pericytes and endothelial cells after AKI (mean6 SEM: 3.360.1 mm before injury versus 12.560.2 mm after injury; P,0.001). Using a genetic ablation model, we asked whether pericyte loss alone is sufficient for capillary destabilization. Ten days after pericyte ablation, we observed endothelial cell damage by electron microscopy. Furthermore, pericyte loss led to significantly reduced capillary number at later time points (mean6SEM capillaries/high-power field: 67.664.7 in
@@ -1743,7 +1743,7 @@ SEM: 21.960.4 mm2 in control versus 24.160.6 mm2 at 10 days; P,0.01 and 24.66
 @article{takasato_strategy_2016,
 	title = {A strategy for generating kidney organoids: {Recapitulating} the development in human pluripotent stem cells.},
 	volume = {420},
-	doi = {http://dx.doi.org/10.1016/j.ydbio.2016.08.024},
+	doi = {10.1016/j.ydbio.2016.08.024},
 	abstract = {Directed differentiation of human pluripotent stem cells (hPSCs) can provide us any required tissue/cell types by recapitulating the development in vitro. The kidney is one of the most challenging organs to generate from hPSCs as the kidney progenitors are composed of at least 4 different cell types, including nephron, collecting duct, endothelial and interstitium progenitors, that are developmentally distinguished populations. Although the actual developmental process of the kidney during human embryogenesis has not been clarified yet, studies using model animals accumulated knowledge about the origins of kidney progenitors. The implications of these findings for the directed differentiation of hPSCs into the kidney include the mechanism of the intermediate mesoderm specification and its patterning along with anteroposterior axis. Using this knowledge, we previously reported successful generation of hPSCs-derived kidney organoids that contained all renal components and modelled human kidney development in vitro. In this review, we explain the developmental basis of the strategy behind this differentiation protocol and compare strategies of studies that also recently reported the induction of kidney cells from hPSCs. We also discuss the characterization of such kidney organoids and limitations and future applications of this technology.},
 	number = {2},
 	journal = {Dev Biol},
@@ -1755,7 +1755,7 @@ SEM: 21.960.4 mm2 in control versus 24.160.6 mm2 at 10 days; P,0.01 and 24.66
 @article{takasat_generation_2016,
 	title = {Generation of kidney organoids from human pluripotent stem cells.},
 	volume = {11},
-	doi = {http://dx.doi.org/10.1038/nprot.2016.098},
+	doi = {10.1038/nprot.2016.098},
 	abstract = {The human kidney develops from four progenitor populations-nephron progenitors, ureteric epithelial progenitors, renal interstitial progenitors and endothelial progenitors-resulting in the formation of maximally 2 million nephrons. Until recently, the reported methods differentiated human pluripotent stem cells (hPSCs) into either nephron progenitor or ureteric epithelial progenitor cells, consequently forming only nephrons or collecting ducts, respectively. Here we detail a protocol that simultaneously induces all four progenitors to generate kidney organoids within which segmented nephrons are connected to collecting ducts and surrounded by renal interstitial cells and an endothelial network. As evidence of functional maturity, proximal tubules within organoids display megalin-mediated and cubilin-mediated endocytosis, and they respond to a nephrotoxicant to undergo apoptosis. This protocol consists of 7 d of monolayer culture for intermediate mesoderm induction, followed by 18 d of 3D culture to facilitate self-organizing renogenic events leading to organoid formation. Personnel experienced in culturing hPSCs are required to conduct this protocol.},
 	number = {9},
 	journal = {Nat Protoc},
